--- a/public/assets/stylesheets/style_index.css
+++ b/public/assets/stylesheets/style_index.css
@@ -11,180 +11,7 @@ video
 html {
   height: 100%;
 }
-.navigation{
-  padding-top:30px;
-  padding-bottom:30px;
-  position:absolute;
-  top:0;
-  width:90%;
-  z-index:1;
-}
 
-.navbar-right{
-  float:right;
-  padding-right:10%;
-}
-
-.navbar-right {
-  text-decoration:none;
-  padding:10px;
-  color: #fff;
-  font-family:Arial;
-  font-weight:900;
-}
-
-.navbar-logo{
-  padding-left:20px;
-  padding-top: 30px;
-  font-family:Arial;
-  font-size:30px;
-  font-weight:bold;
-  text-decoration:none;
-  color:#fff;
-}
-/* responsive nav bar */
-
-@media screen and (max-width: 600px) {
-  .navbar-right a:not(:first-child) {display: none;}
-  .navbar-right a.icon {
-    float: right;
-    display: block;
-  }
-}
-@media screen and (max-width: 600px) {
-  .navbar-right {position: relative;}
-  .navbar-right a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .navbar-right.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-/* video */
-#myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-}
-.video-container {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    z-index: -100;
-}
-
-.fullscreen-bg__video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-@media (min-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media (max-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: auto;
-    height: 100%;
-  }
-}
-/* rotating text */
-.text {
-  position: absolute;
-  padding-top: 25%;
-  width: 600px;
-  color: #fff;
-  left: 50%;
-  margin-left: -225px;
-  height: 40px;
-  top: 50%;
-  margin-top: -20px;
-  font-family: 'Open Sans', 'Helvetica', 'Arial' sans-serif;
-  font-weight: 600;
-  font-size: 40px;
-
-}
-
-h7 {
-  display: inline-block;
-  vertical-align: top;
-  margin: 0;
-
-
-}
-
-.word {
-  position: absolute;
-  width: 220px;
-  opacity: 0;
-}
-
-.letter {
-  display: inline-block;
-  position: relative;
-  float: left;
-  -webkit-transform: translateZ(25px);
-          transform: translateZ(25px);
-  -webkit-transform-origin: 50% 50% 25px;
-          transform-origin: 50% 50% 25px;
-}
-
-.letter.out {
-  -webkit-transform: rotateX(90deg);
-          transform: rotateX(90deg);
-  -webkit-transition: -webkit-transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: -webkit-transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19), -webkit-transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.letter.behind {
-  -webkit-transform: rotateX(-90deg);
-          transform: rotateX(-90deg);
-}
-
-.letter.in {
-  -webkit-transform: rotateX(0deg);
-          transform: rotateX(0deg);
-  -webkit-transition: -webkit-transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: -webkit-transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275), -webkit-transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.purple {
-  color: #6b2589;
-}
-
-.belize {
-  color: #2980b9;
-}
-
-.pomegranate {
-  color: #c0392b;
-}
-
-.green {
-  color: #16a085;
-}
-
-.red {
-  color: #b72121;
-}
 
 body {
     background-color: #4d4d4d;
@@ -232,14 +59,6 @@ a.light-link {
 
 
 }
-/* img {
-  width: 96px;
-  height: 26px;
-} */
-/* #signup-button {
-    color: rgb(46, 46, 46);
-    font: 16px;
-} */
 ::placeholder {
     color: rgb(46, 46, 46);
 }
